--- a/presentation_bib.bib
+++ b/presentation_bib.bib
@@ -49,3 +49,34 @@
   journal   = {arXiv preprint arXiv:2203.15556},
   year      = {2022}
 }
+@inproceedings{velickovic2018gats,
+  author       = {Petar Velickovic and
+                  Guillem Cucurull and
+                  Arantxa Casanova and
+                  Adriana Romero and
+                  Pietro Li{\`{o}} and
+                  Yoshua Bengio},
+  title        = {Graph Attention Networks},
+  booktitle    = {6th International Conference on Learning Representations, {ICLR} 2018,
+                  Vancouver, BC, Canada, April 30 - May 3, 2018, Conference Track Proceedings},
+  publisher    = {OpenReview.net},
+  year         = {2018},
+  url          = {https://openreview.net/forum?id=rJXMpikCZ},
+  timestamp    = {Thu, 25 Jul 2019 14:25:41 +0200},
+  biburl       = {https://dblp.org/rec/conf/iclr/VelickovicCCRLB18.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+@inproceedings{brody2022gatv2,
+  author       = {Shaked Brody and
+                  Uri Alon and
+                  Eran Yahav},
+  title        = {How Attentive are Graph Attention Networks?},
+  booktitle    = {The Tenth International Conference on Learning Representations, {ICLR}
+                  2022, Virtual Event, April 25-29, 2022},
+  publisher    = {OpenReview.net},
+  year         = {2022},
+  url          = {https://openreview.net/forum?id=F72ximsx7C1},
+  timestamp    = {Sat, 20 Aug 2022 01:15:42 +0200},
+  biburl       = {https://dblp.org/rec/conf/iclr/Brody0Y22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
