Ajusta nome de autores

--- a/beamerpolito.tex
+++ b/beamerpolito.tex
@@ -28,7 +28,7 @@
 % --- Metadados ---
 \title{Attention Models: da motivação às variantes modernas}
 \subtitle{Intuição geométrica, formulação matemática e aplicações}
-\author{Rodrigo Petrus Domingues, Felipe Grael e Vivian}
+\author{Rodrigo Petrus, Felipe Grael e Vivian Carvalho}
 \date{\today}
 
 \begin{document}
