--- a/presentation_bib.bib
+++ b/presentation_bib.bib
@@ -80,3 +80,11 @@
   biburl       = {https://dblp.org/rec/conf/iclr/Brody0Y22.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+@article{Xu2020InductiveRL,
+  title={Inductive Representation Learning on Temporal Graphs},
+  author={Da Xu and Chuanwei Ruan and Evren K{\"o}rpeoglu and Sushant Kumar and Kannan Achan},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2002.07962},
+  url={https://api.semanticscholar.org/CorpusID:211171395}
+}
